Add link to github

--- a/index.html
+++ b/index.html
@@ -1698,7 +1698,8 @@
                     </table>
 
                     <footer class="small">
-                        Par Adrien Humilière pour <a href="https://www.larustinedenanterre.fr">La Rustine de Nanterre</a>
+                        Par Adrien Humilière pour <a href="https://www.larustinedenanterre.fr">La Rustine de Nanterre</a><br />
+                        Voir sur <a href="https://github.com/adhumi/NanterreBikeParking">GitHub</a>
                     </footer>
                 </div>
             </div>
