--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <div class="alert alert-primary d-flex align-items-center" role="alert" style="margin-top: 2em; margin-bottom: 2em;">
                         <blockquote class="blockquote" style="margin: 0;">
-                            <p>D'après les données disponibles sur OpenStreetMap pour la ville de Nanterre, 43 % des équipements ne proposent pas de stationnement vélo à moins de 100 mètres.</p>
+                            <p>D'après les données disponibles sur OpenStreetMap pour la ville de Nanterre, <strong>43 %</strong> des équipements ne proposent pas de stationnement vélo à moins de 100 mètres.</p>
                         </blockquote>
                     </div>
                     
